# autotools_c_project

./: Makefile.am  auto_build.sh  configure.ac  readme.md  readme.txt
lib/: hello.c  hello.h
main/: main.c
